# Lumi

./: .gitignore  .gitmodules  README.md  dev.ipynb  main.py  requirements.txt
.stfolder/: syncthing-folder-664600.txt
api/: g.py  g_api.py
backend/: model.py  run.sh  server.py  server_socket.py
frontend/: CMakeLists.txt
frontend/Lumi/: App.tsx  app.json  msbuild.binlog  package-lock.json  package.json  tsconfig.json
frontend/Lumi/@types/: alltypes.d.ts
frontend/Lumi/src/: index.ts
frontend/Lumi/src/api/: SocketChatInterface.tsx  TextToSpeech.ts  WebSocketClient.tsx  serverAPI.ts
frontend/Lumi/src/components/: ArchiveInterface.tsx  ArchiveItem.tsx  BigVoiceButton.tsx  ChatInput.tsx  ChatInterface.tsx  Icon.tsx  MicrophoneIndicator.tsx  NavigationStack.tsx  ResponseDisplay.tsx  SettingsInterface.tsx  VoiceButton.tsx
frontend/Lumi/src/features/assistant/: VoiceAssistantScreen.tsx
frontend/Lumi/src/styles/: archiveStyles.ts  commonStyles.ts  settingsStyles.ts  voiceAssistantStyles.ts
frontend/Lumi/windows/: ExperimentalFeatures.props  Lumi.sln
frontend/Lumi/windows/Lumi/: App.idl  App.xaml  AutolinkedNativeModules.g.targets  Lumi.vcxproj  MainPage.idl  MainPage.xaml  Package.appxmanifest
frontend/lumi/: app.cpp
imgui-frontend/: CMakeLists.txt  frontend.cpp
imgui-frontend/lumi/: CMakeLists.txt  app.cpp
tui/: app.py  bindings.py  commands.py  interface.py  layout.py  render.py
utils/: time.py
